# meeting-minutes

./: .gitignore  README.md  flake.nix  gui_main.py  main.py  meeting-minutes.spec  meetings-minutes.spec  models.py  pyproject.toml  spell_check_camel.py  typst_io.py  typst_runner.py  typst_tables.py  webapp.py
.github/workflows/: build.yml
assets/: meeting-minutes.icns
assets/meeting_template/lib/: constants.typ  letters.typ  setup.typ  topics.typ
packaging/linux/: build-appimage.sh  meeting-minutes.desktop  meetings-minutes.desktop
scripts/: build-icons.py  fetch-typst.sh
web/: index.html
