[project]
name = "meetings-minutes"
version = "0.1.0"
description = "Capture and summarize meeting minutes"
requires-python = ">=3.12"
dependencies = [
    "nicegui",
    "platformdirs",
    "pywebview",
]

[project.optional-dependencies]
linux = [
    "pyside6",
    "qtpy",
]

[project.scripts]
meetings-minutes = "main:main"
