[project]
name = "meeting-minutes"
version = "1.2.0"
description = "Capture and summarize meeting minutes"
requires-python = ">=3.12"
dependencies = [
    "camel-tools>=1.5.7",
    "nicegui",
    "platformdirs",
    "pywebview",
    "spylls>=0.1.7",
]

[project.optional-dependencies]
linux = [
    "pyside6",
    "qtpy",
]

[project.scripts]
meeting-minutes = "main:main"

[tool.uv]
# camel-tools pins transformers==4.43.4 which pulls tokenizers==0.19.1 —
# that wheel has a broken pyproject.toml uv can't parse. Override to a
# newer tokenizers known to build cleanly.
#
# camel-kenlm is a C-extension wrapper around KenLM that doesn't compile
# against Python 3.13+ (uses removed CPython internals). It's only used
# by camel-tools' disambiguator, which we don't touch for spell-check.
# A marker that's never satisfied effectively removes it from resolution.
override-dependencies = [
    "tokenizers>=0.20",
    "camel-kenlm; python_version < '3.0'",
]
