[project]
name = "meeting-minutes"
version = "1.3.0"
description = "Capture and summarize meeting minutes"
requires-python = ">=3.12"
dependencies = [
    "camel-tools>=1.5.7",
    "nicegui",
    "platformdirs",
    "pywebview",
    "spylls>=0.1.7",
]

[project.optional-dependencies]
linux = [
    "pyside6",
    "qtpy",
]

[project.scripts]
meeting-minutes = "main:main"

[tool.uv]
# camel-tools' transitive deps include transformers → torch → the CUDA
# libraries (~5 GB of installs) and scikit-learn — none of which the
# morphology analyzer touches. Skip them with markers that can never be
# satisfied so uv drops them from resolution. Same trick for camel-kenlm
# (broken on Python 3.13+).
override-dependencies = [
    "camel-kenlm; python_version < '3.0'",
    "transformers; python_version < '3.0'",
    "torch; python_version < '3.0'",
    "tokenizers; python_version < '3.0'",
    "scikit-learn; python_version < '3.0'",
    "huggingface-hub; python_version < '3.0'",
    "triton; python_version < '3.0'",
    "safetensors; python_version < '3.0'",
]
